--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,5 @@ editor_options:
   chunk_output_type: inline
 ---
 
-An example pages site with multiple pages and a table of contents.
 
-This could be a landing page for the site. Feel free to put whatever here!
+This is a landing page for the site. 
